# agent-backbone

./: .gitignore  README.md  config.toml.example  main.py  pyproject.toml
docs/superpowers/plans/: 2026-04-29-gigachat-llm-provider.md
docs/superpowers/specs/: 2026-04-29-convert-currency-tool-design.md  2026-04-29-gigachat-llm-config-design.md
src/: config.py  llm_factory.py
src/evolution/: reflector.py
src/graph/: builder.py  nodes.py  state.py
src/observability/: tracker.py
src/prompts/: templates.py
src/rag/: retriever.py
src/server/: app.py
src/tools/: banking.py
src/tools/system/: __init__.py  file_ops.py  notebook.py  search.py  shell.py  web.py
tests/: conftest.py  test_config.py  test_graph.py  test_llm_factory.py  test_tools.py
