[project]
name = "bank-agent"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "langgraph>=0.2.0",
    "langchain-core>=0.3.0",
    "langchain-ollama>=0.2.0",
    "langchain-community>=0.3.0",
    "langchain-chroma>=0.2.0",
    "fastapi>=0.115.0",
    "uvicorn>=0.30.0",
    "pydantic>=2.9.0",
    "tenacity>=9.0.0",
    "rich>=13.0.0",
]

[project.optional-dependencies]
gigachat = ["langchain-gigachat>=0.3.0"]

[dependency-groups]
dev = [
    "pytest-asyncio>=0.23.0",
    "pytest>=8.3.0"
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
asyncio_mode = "auto"
